tests/valid/CoCoCmFunctionReturnsReal.nestml
"""
CoCoCmFunctionReturnsReal.nestml.nestml
###########################


Description
+++++++++++

This model is used to test whether functions expected for each 
matching compartmental variable return type 'real'

Positive case.


Copyright statement
+++++++++++++++++++

This file is part of NEST.

Copyright (C) 2004 The NEST Initiative

NEST is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 2 of the License, or
(at your option) any later version.

NEST is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with NEST.  If not, see <http://www.gnu.org/licenses/>.
"""

neuron cm_model:

  state:
    # indicate that we have a compartmental model
    # by declaring an unused variable with the name "v_comp"
    v_comp real = 0.0
    
    m_Na real = 0.0
    h_Na real = 0.0
    
  end

    #sodium
    function m_inf_Na(v_comp real) real:
        return (0.182*v_comp + 6.3723659999999995)/((1.0 - 0.020438532058318047*exp(-0.1111111111111111*v_comp))*((-0.124*v_comp - 4.3416119999999996)/(1.0 - 48.927192870146527*exp(0.1111111111111111*v_comp)) + (0.182*v_comp + 6.3723659999999995)/(1.0 - 0.020438532058318047*exp(-0.1111111111111111*v_comp))))
    end
    
    function tau_m_Na(v_comp real) real:
        return 0.3115264797507788/((-0.124*v_comp - 4.3416119999999996)/(1.0 - 48.927192870146527*exp(0.1111111111111111*v_comp)) + (0.182*v_comp + 6.3723659999999995)/(1.0 - 0.020438532058318047*exp(-0.1111111111111111*v_comp)))
    end
    
    function h_inf_Na(v_comp real) real:
        return 1.0/(exp(0.16129032258064516*v_comp + 10.483870967741936) + 1.0)
    end
    
    function tau_h_Na(v_comp real) real: 
        return 0.3115264797507788/((-0.0091000000000000004*v_comp - 0.68261830000000012)/(1.0 - 3277527.8765015295*exp(0.20000000000000001*v_comp)) + (0.024*v_comp + 1.200312)/(1.0 - 4.5282043263959816e-5*exp(-0.20000000000000001*v_comp)))
    end
    
    function some_random_function_to_ignore(v_comp real, something_else real) real: 
        return 0.0
    end

  equations: 
    inline cm_p_open_Na real = m_Na**3 * h_Na**1 
    
  end

  parameters:
    e_Na real = 50.0
    gbar_Na real = 0.0
    
  end


end
